[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/hook.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/slap.ogg" type="AudioStream" id=4]
[ext_resource path="res://scenes/mouse.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/underwater_ambiance.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/ground.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=8]
[ext_resource path="res://sounds/collect.wav" type="AudioStream" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="background" parent="." instance=ExtResource( 2 )]

[node name="hook" parent="." instance=ExtResource( 3 )]

[node name="points" type="Label" parent="."]
margin_left = 968.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 30.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 8 )]
position = Vector2( 488, 336 )

[node name="fishes" type="Node2D" parent="."]

[node name="pearls" type="Node2D" parent="."]

[node name="slap_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.0
autoplay = true

[node name="collect_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="difficulty_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ground" parent="." instance=ExtResource( 7 )]

[node name="mouse" parent="." instance=ExtResource( 5 )]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="difficulty_timer" to="." method="_on_difficulty_timer_timeout"]
